2015-09-12 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: change the number of test queries to be
	determined by -t option instead of a product of number of threads
	and the testing option, i.e., -t 100 will always generate 100
	random queries.  It will try to make sure each thread has two
	queries to process, so when the number of threads is large, it
	will still inscrease the number of random queries generated.
	* test/Makefile.am: change check-sq0 and check-sq1 to use multiple
	threads to speed up the test execution.  On a MacBook Pro,
	check-sq0 runs in 90 seconds.
	* examples/ibis.cpp: change all invocations of buildIndexes to use
	global variables indexingOptioins and build_index to control the
	type of index built and the number of threads used

2015-09-02 John Wu <John dot Wu at ACM dot org>
	* src/fileManger.cpp:634 move tests on OPEN_MAX and STREAM_MAX as
	fallback option of sysconf(_SC_OPEN_MAX), which should give the
	correct number of file descriptors available at runtime, the other
	macros contains static file descriptor limits predefined by POSIX
	standards (to address a problem observed by Jon Stabala)

2015-08-28 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: minor reordering of states that read
	configuration files supplied from the command line

2015-08-23 John Wu <John dot Wu at ACM dot org>
	* src/utilidor.cpp: protect all calls to strcmp to prevent sending
	null pointer to it (strcmp(A, B) > 0 ==> (A != 0 && (B == 0 ||
	strcmp(A, B) > 0)), strcmp(A, B) >= 0 ==> ((A != 0 && (B == 0 ||
	strcmp(A, B) >= 0)) || (A == 0 && B == 0))
	* tests/Makefile.am: adapted changes from Jon Strabala to
	tests/Makefile.in to tests/Makefile.am to address problems with
	more strict sh script syntax under solaris derivatives (works on
	Mac OS X 10.10.5, will ask Jon to try the new Makefile.am)

2015-08-19 John Wu <John dot Wu at ACM dot org>
	* src/ibis.h: update the in-line documentation of
	ibis::index::INDEX_TYPE
